--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "webpack-starter",
+  "name": "more-trivia",
   "version": "1.0.0",
-  "description": "Webpack Starter template for front-end dev",
-  "main": "src/index.js",
+  "description": "A webpack preConfigured start kit There is two scripts for dev and build",
+  "main": "postcss.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack/webpack.config.dev.js",
     "build": "webpack --config webpack/webpack.config.prod.js",
     "push-dist": "git subtree push --prefix dist origin gh-pages"
   },
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "lint": "eslint .",
-  "lint:fix": "eslint . --fix",
   "devDependencies": {
-    "@babel/core": "^7.23.3",
-    "@babel/preset-env": "^7.23.3",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.0.0",
-    "html-webpack-plugin": "^5.5.3",
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "html-webpack-plugin": "^5.5.4",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.32",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.3.0",
     "prettier": "3.1.0",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "tailwindcss": "^3.3.6",
     "webpack": "^5.89.0",
