--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
+  },
+  "dependencies": {
+    "material-symbols": "^0.14.2"
   }
 }
